# wenshu_agent

./: .dockerignore  .editorconfig  .gitignore  README.md  compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml  docker-build.yml
app/agent/: checkpoint.py  context.py  error_policy.py  graph.py  llm.py  state.py
app/agents/: __init__.py  agent_tool.py  base.py  capability.py  handoff.py  memory.py  orchestrator.py  registry.py  router.py
app/api/: dependencies.py
app/cache/: __init__.py  exact_cache.py  key_builder.py  lease.py  models.py  policy.py  sanitizer.py  semantic_cache.py  semantic_guard.py  service.py
app/clients/: embedding_client_manager.py  es_client_manager.py  mysql_client_manager.py  qdrant_client_manager.py  redis_client_manager.py
app/config/: app_config.py  config_loader.py  meta_config.py
app/core/: context.py  events.py  exceptions.py  lifespan.py  logging.py  query_audit.py  shutdown.py  telemetry.py  tracing.py
app/evaluation/: __init__.py  agent_metrics.py  answer_metrics.py  dataset.py  judge.py  metrics.py  rag_metrics.py  regression.py  report.py  runner.py  sql_metrics.py  trace.py
app/governance/: __init__.py  adaptive_router.py  budget.py  capacity.py  common.py  complexity.py  context_budget.py  cost_budget.py  degradation.py  error_budget.py  finops.py  load_shedding.py  pricing.py  quota.py  runtime.py  slo.py
app/llm/: gateway.py  model_router.py  prompt_manager.py  token_cost.py
app/prompt/: prompt_loader.py
app/scripts/: bootstrap_demo.py  build_meta_knowledge.py  reset_demo.py  sync_metadata.py
app/security/: __init__.py  authorization.py  context.py  data_masking.py  masking.py  policy.py  prompt_guard.py  rag_guard.py  sql_access.py  sql_cost.py  sql_identifiers.py  sql_security.py  tool_guard.py
app/service/: meta_knowledge_service.py  metadata_sync_service.py  query_lifecycle.py  query_service.py
app/test/: test_context_manager.py  test_generic_class.py  test_generic_function.py
benchmarks/: README.md  locustfile.py
conf/: app_config.example.yaml  app_config.prod.example.yaml  meta_config.yaml
datasets/evaluation/: golden.json
deploy/kubernetes/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  secret.example.yaml  service.yaml
docker/: Dockerfile.prod  docker-compose.yaml
docker/elasticsearch/: Dockerfile
docker/mysql/: dw.sql  meta.sql
docs/: interview-demo.md
docs/architecture/: hybrid-candidate-ranking.md
docs/governance/: cost-slo-scaling.md
docs/reliability/: failure-scenarios.md
evals/: README.md  run_evaluation.py  schemas.py  text_to_sql_cases.yaml
prompts/: correct_sql.prompt  filter_metric_info.prompt  filter_table_info.prompt  generate_sql.prompt  interpret_result.prompt  plan_query.prompt
scripts/: check_no_secrets.py  check_readme_commands.py  check_text_encoding.py
tests/: conftest.py
tests/integration/: test_agent_graph.py  test_checkpoint_recovery.py  test_evaluation_pipeline.py  test_governance_query_flow.py  test_health_api.py  test_hybrid_candidate_ranking_flow.py  test_kubernetes_config.py  test_llm_gateway_agent_nodes.py  test_multi_agent_flow.py  test_observability.py  test_query_api.py  test_query_cache_flow.py  test_redis_runtime_lifecycle.py  test_runtime_acceptance.py  test_security_query_flow.py  test_shutdown_reliability.py
tests/unit/: test_a2a_protocol.py  test_adaptive_model_router.py  test_agent_metrics.py  test_agent_registry.py  test_agent_router.py  test_answer_metrics.py  test_app_config_validation.py  test_finops.py  (+71 more)
(+58 files in other folders)
