[project]
name = "data-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=48.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.3",
    "huggingface-hub>=1.18.0",
    "jieba>=0.42.1",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "omegaconf>=2.3.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "sqlalchemy>=2.0.50",
]
