[project]
name = "wenshu-agent"
version = "0.1.0"
description = "Interview-grade FastAPI LangGraph text-to-SQL agent with SQL security gateway"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncmy>=0.2.11",
    "cryptography>=48.0.0",
    "elasticsearch[async]>=8,<9",
    "fastapi[standard]>=0.136.3",
    "httpx>=0.28.1",
    "huggingface-hub>=1.18.0",
    "jieba>=0.42.1",
    "langchain>=1.3.4",
    "langchain-deepseek>=1.1.0",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.4",
    "loguru>=0.7.3",
    "mypy>=2.3.0",
    "omegaconf>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "ruff>=0.15.21",
    "sqlalchemy>=2.0.50",
    "sqlglot>=30.12.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [".venv", "docker/embedding", "app/test"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008", "UP047"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = false
exclude = [".venv", "docker/embedding", "app/test"]
